--- a/whisper_asr_colab.ipynb
+++ b/whisper_asr_colab.ipynb
@@ -18,25 +18,13 @@
       },
       "outputs": [],
       "source": [
-        "import sys\n",
-        "import time\n",
-        "import os\n",
-        "import re\n",
         "import torch\n",
         "from google.colab import files\n",
         "\n",
-        "!pip install --upgrade git+https://github.com/pneuly/whisper-asr-colab.git\n",
-        "from whisper_asr_colab.docx_generator import DocxGenerator\n",
-        "from whisper_asr_colab.audio import dl_audio, trim_audio\n",
-        "from whisper_asr_colab.utils import write_asr_result, write_diarize_result\n",
-        "from whisper_asr_colab.asr import whisperx_transcribe, faster_whisper_transcribe, realtime_transcribe\n",
-        "from whisper_asr_colab.diarize import diarize\n",
-        "\n",
         "# @title 自動文字起こし（Wisper）{ display-mode: \"form\" }\n",
         "# @markdown 以下の設定項目を入力しセルを実行（Ctrl+Enter）<font color=\"red\">※設定項目の説明は下にあります</font>\n",
-        "\n",
         "# @markdown #<b>設定</b>\n",
-        "audiopath = 'https://www.youtube.com/watch?v=xAmEQOqtMvA'  # @param {type:\"string\"}\n",
+        "audio = 'https://www.youtube.com/watch?v=xAmEQOqtMvA'  # @param {type:\"string\"}\n",
         "model_size = \"large-v3\" # @param [\"large-v3\", \"large-v2\", \"large\", \"medium\", \"small\", \"base\", \"tiny\"] {allow-input: true}\n",
         "diarization = True  # @param {type:\"boolean\"}\n",
         "password = None  # @param {type:\"string\"}\n",
@@ -65,89 +53,34 @@
         "# @markdown <br/><b>initial_prompt:</b> キーワード（です。 ます。は句読点を付けるために入れています）\n",
         "# @markdown <br/><b>reatime: </b><font color=\"red\">ストリーミングをリアルタイムで文字起こしをする場合のみオンにしてください。</font>\n",
         "\n",
-        "# ----- 以下変更不要 ------\n",
-        "if audiopath == \"\":\n",
-        "    audiopath = list(files.upload())[0]\n",
+        "# ----- main routine ------\n",
+        "if audio == \"\":\n",
+        "    audio = list(files.upload())[0]\n",
         "\n",
+        "!pip install --upgrade git+https://github.com/pneuly/whisper-asr-colab.git@develop -q\n",
+        "from whisper_asr_colab.worker import Worker  # noqa: E402\n",
         "\n",
-        "# --- main ---\n",
         "# dl audio if needed\n",
-        "dlaudio = False\n",
-        "if not realtime:\n",
-        "    if re.match(r\"^(https://).+\", audiopath):\n",
-        "        dlaudio = True\n",
-        "        # download and return file name\n",
-        "        audiopath = dl_audio(audiopath, password)\n",
-        "    else:\n",
-        "        # ファイルサイズが小さい場合はアップロード途中の可能性があるためチェックする\n",
-        "        filesize = os.path.getsize(audiopath)\n",
-        "        if filesize < 10 ** 7:  # 10MB未満の場合\n",
-        "            time.sleep(10)\n",
-        "            filesize2 = os.path.getsize(audiopath)\n",
-        "            if (filesize2 - filesize) > 0:\n",
-        "                sys.exit(\n",
-        "                    \"ファイルのアップロードが終わっていない可能性があります。アップロード完了後再度実行してください。\"\n",
-        "                    )\n",
-        "    # trim\n",
-        "    if start_time or end_time:\n",
-        "        input_path = trim_audio(audiopath, start_time, end_time)\n",
-        "    else:\n",
-        "        input_path = audiopath\n",
-        "\n",
-        "\n",
-        "# Transcribe\n",
-        "if realtime: # realtime trascription\n",
-        "    realtime_transcribe(audiopath, model_size)\n",
-        "    del model_size\n",
-        "    torch.cuda.empty_cache()\n",
-        "    sys.exit(0)\n",
-        "elif diarization: # use WhisperX\n",
-        "    result = whisperx_transcribe(\n",
-        "        input_path=input_path,\n",
-        "        chunk_size=CHUNK_SIZE,\n",
-        "        batch_size=BATCH_SIZE,\n",
-        "        model_size=model_size,\n",
-        "        initial_prompt=initial_prompt\n",
-        "        )\n",
-        "    segments = result[\"segments\"]\n",
-        "else:  # use faster-whisper\n",
-        "    segments = faster_whisper_transcribe(\n",
-        "        input_path=input_path,\n",
-        "        model_size=model_size,\n",
-        "        initial_prompt=initial_prompt\n",
-        "        )\n",
-        "\n",
-        "# write results to text files\n",
-        "outfiles = write_asr_result(\n",
-        "    os.path.basename(input_path),\n",
-        "    segments,\n",
-        "    timestamp_offset\n",
+        "worker = Worker(\n",
+        "    audio = audio,\n",
+        "    model_size = model_size,\n",
+        "    diarization = diarization,\n",
+        "    password = password,\n",
+        "    start_time = start_time,\n",
+        "    end_time = end_time,\n",
+        "    timestamp_offset = timestamp_offset,\n",
+        "    initial_prompt = initial_prompt,\n",
+        "    realtime = realtime,\n",
+        "    chunk_size = CHUNK_SIZE,\n",
+        "    batch_size = BATCH_SIZE,\n",
+        "    hugging_face_token = HUGGING_FACE_TOKEN\n",
         ")\n",
-        "for filename in outfiles:\n",
-        "    files.download(filename)\n",
         "\n",
-        "if diarization:\n",
-        "    # Diarize\n",
-        "    filename = write_diarize_result(\n",
-        "        f\"{os.path.basename(input_path)}\",\n",
-        "        segments,\n",
-        "        timestamp_offset\n",
-        "    )\n",
-        "    files.download(filename)\n",
+        "worker.run()\n",
         "\n",
         "# gc GPU RAM\n",
-        "del segments\n",
-        "torch.cuda.empty_cache()\n",
-        "\n",
-        "# Generate docx\n",
-        "if diarization:\n",
-        "    doc = DocxGenerator()\n",
-        "    doc.txt_to_word(filename)\n",
-        "    files.download(doc.docfilename)\n",
-        "\n",
-        "# DL audio file\n",
-        "if dlaudio:\n",
-        "    files.download(audiopath)\n"
+        "del worker\n",
+        "torch.cuda.empty_cache()\n"
       ]
     }
   ],
@@ -165,7 +98,16 @@
       "name": "python3"
     },
     "language_info": {
-      "name": "python"
+      "codemirror_mode": {
+        "name": "ipython",
+        "version": 3
+      },
+      "file_extension": ".py",
+      "mimetype": "text/x-python",
+      "name": "python",
+      "nbconvert_exporter": "python",
+      "pygments_lexer": "ipython3",
+      "version": "3.10.8"
     }
   },
   "nbformat": 4,
