Removed WhisperX. Now using only faster-whisper.

--- a/whisper_asr_colab.ipynb
+++ b/whisper_asr_colab.ipynb
@@ -18,8 +18,13 @@
       },
       "outputs": [],
       "source": [
-        "import torch\n",
+        "import sys\n",
+        "import logging\n",
+        "import locale\n",
+        "from torch.cuda import empty_cache\n",
         "from google.colab import files\n",
+        "\n",
+        "locale.getpreferredencoding = lambda: \"UTF-8\"\n",
         "\n",
         "# @title 自動文字起こし（Wisper）{ display-mode: \"form\" }\n",
         "# @markdown 以下の設定項目を入力しセルを実行（Ctrl+Enter）<font color=\"red\">※設定項目の説明は下にあります</font>\n",
@@ -32,9 +37,9 @@
         "end_time = None  # @param {type:\"string\"}\n",
         "timestamp_offset = None  # @param {type:\"string\"}\n",
         "initial_prompt = \"定刻 なりましたので、 です。 ます。\"  # @param {type:\"string\"}\n",
+        "batch_size = 1 # @param {type:\"number\"}\n",
         "realtime = False  # @param {type:\"boolean\"}\n",
         "CHUNK_SIZE = 30\n",
-        "BATCH_SIZE = 1\n",
         "HUGGING_FACE_TOKEN = \"\"\n",
         "\n",
         "# @markdown ###<br/><b>〔設定の説明〕</b>\n",
@@ -51,13 +56,22 @@
         "# @markdown <br/><b>end_time:</b> 終了時間 hh:mm:ss（指定しない場合は最後まで）\n",
         "# @markdown <br/><b>timestamp_offset:</b> タイムスタンプを指定の時間だけずらす hh:mm:ss（Noneの場合はstart_timeと連動）\n",
         "# @markdown <br/><b>initial_prompt:</b> キーワード（です。 ます。は句読点を付けるために入れています）\n",
+        "# @markdown <br/><b>batch_size:</b> 2以上にすると少し早くなります。欠落が発生する場合は1にしてください。\n",
         "# @markdown <br/><b>reatime: </b><font color=\"red\">ストリーミングをリアルタイムで文字起こしをする場合のみオンにしてください。</font>\n",
         "\n",
         "# ----- main routine ------\n",
+        "logging.basicConfig(\n",
+        "    stream=sys.stdout,\n",
+        "    level=logging.WARNING,\n",
+        "    force=True)\n",
+        "\n",
+        "if diarization and HUGGING_FACE_TOKEN == \"\":\n",
+        "    raise ValueError(f\"HUGGING_FACE_TOKEN にトークンを入力してください\")\n",
+        "\n",
         "if audio == \"\":\n",
         "    audio = list(files.upload())[0]\n",
         "\n",
-        "!pip install --upgrade git+https://github.com/pneuly/whisper-asr-colab.git@develop -q\n",
+        "!pip install --upgrade git+https://github.com/pneuly/whisper-asr-colab.git@feature/remove_whisperx -q\n",
         "from whisper_asr_colab.worker import Worker  # noqa: E402\n",
         "\n",
         "# dl audio if needed\n",
@@ -71,8 +85,8 @@
         "    timestamp_offset = timestamp_offset,\n",
         "    initial_prompt = initial_prompt,\n",
         "    realtime = realtime,\n",
-        "    chunk_size = CHUNK_SIZE,\n",
-        "    batch_size = BATCH_SIZE,\n",
+        "    chunk_length = CHUNK_SIZE,\n",
+        "    batch_size = batch_size,\n",
         "    hugging_face_token = HUGGING_FACE_TOKEN\n",
         ")\n",
         "\n",
@@ -80,7 +94,7 @@
         "\n",
         "# gc GPU RAM\n",
         "del worker\n",
-        "torch.cuda.empty_cache()\n"
+        "empty_cache()\n"
       ]
     }
   ],
