Modified for merging into the main branch

--- a/whisper_asr_colab.ipynb
+++ b/whisper_asr_colab.ipynb
@@ -36,11 +36,13 @@
         "start_time = None  # @param {type:\"string\"}\n",
         "end_time = None  # @param {type:\"string\"}\n",
         "timestamp_offset = None  # @param {type:\"string\"}\n",
-        "initial_prompt = \"定刻 なりましたので、 です。 ます。\"  # @param {type:\"string\"}\n",
-        "batch_size = 1 # @param {type:\"number\"}\n",
+        "hotwords = \"次に、これです。\" # @param {type:\"string\"}\n",
+        "batch_size = 4 # @param {type:\"number\"}\n",
         "realtime = False  # @param {type:\"boolean\"}\n",
-        "CHUNK_SIZE = 30\n",
         "HUGGING_FACE_TOKEN = \"\"\n",
+        "initial_prompt = \"定刻になりましたので、開始いたします。\"\n",
+        "prefix = None\n",
+        "vad_filter = True,\n",
         "\n",
         "# @markdown ###<br/><b>〔設定の説明〕</b>\n",
         "# @markdown <b>audiopath:</b> 文字起こしする音声ファイルの場所<br/>\n",
@@ -55,7 +57,7 @@
         "# @markdown <br/><b>start_time:</b> 開始時間 hh:mm:ss</b>（指定しない場合は最初から）\n",
         "# @markdown <br/><b>end_time:</b> 終了時間 hh:mm:ss（指定しない場合は最後まで）\n",
         "# @markdown <br/><b>timestamp_offset:</b> タイムスタンプを指定の時間だけずらす hh:mm:ss（Noneの場合はstart_timeと連動）\n",
-        "# @markdown <br/><b>initial_prompt:</b> キーワード（です。 ます。は句読点を付けるために入れています）\n",
+        "# @markdown <br/><b>hotwords:</b> キーワード（次に、これです。は句読点を付けるために入れています。）\n",
         "# @markdown <br/><b>batch_size:</b> 2以上にすると少し早くなります。欠落が発生する場合は1にしてください。\n",
         "# @markdown <br/><b>reatime: </b><font color=\"red\">ストリーミングをリアルタイムで文字起こしをする場合のみオンにしてください。</font>\n",
         "\n",
@@ -66,28 +68,30 @@
         "    force=True)\n",
         "\n",
         "if diarization and HUGGING_FACE_TOKEN == \"\":\n",
-        "    raise ValueError(f\"HUGGING_FACE_TOKEN にトークンを入力してください\")\n",
+        "    raise ValueError(\"HUGGING_FACE_TOKEN にトークンを入力してください\")\n",
         "\n",
         "if audio == \"\":\n",
         "    audio = list(files.upload())[0]\n",
         "\n",
-        "!pip install --upgrade git+https://github.com/pneuly/whisper-asr-colab.git@feature/remove_whisperx -q\n",
+        "!pip install git+https://github.com/pneuly/whisper-asr-colab.git@main -q\n",
         "from whisper_asr_colab.worker import Worker  # noqa: E402\n",
         "\n",
-        "# dl audio if needed\n",
         "worker = Worker(\n",
-        "    audio = audio,\n",
-        "    model_size = model_size,\n",
-        "    diarization = diarization,\n",
-        "    password = password,\n",
-        "    start_time = start_time,\n",
-        "    end_time = end_time,\n",
-        "    timestamp_offset = timestamp_offset,\n",
-        "    initial_prompt = initial_prompt,\n",
-        "    realtime = realtime,\n",
-        "    chunk_length = CHUNK_SIZE,\n",
-        "    batch_size = batch_size,\n",
-        "    hugging_face_token = HUGGING_FACE_TOKEN\n",
+        "    audio=audio,\n",
+        "    model_size=model_size,\n",
+        "    language=\"ja\",\n",
+        "    diarization=diarization,\n",
+        "    password=password,\n",
+        "    start_time=start_time,\n",
+        "    end_time=end_time,\n",
+        "    timestamp_offset=timestamp_offset,\n",
+        "    initial_prompt=initial_prompt,\n",
+        "    realtime=realtime,\n",
+        "    batch_size=batch_size,\n",
+        "    hugging_face_token=HUGGING_FACE_TOKEN,\n",
+        "    hotwords=hotwords,\n",
+        "    prefix=prefix,\n",
+        "    vad_filter=vad_filter\n",
         ")\n",
         "\n",
         "worker.run()\n",
