Organize build-related configurations

--- a/whisper_asr_colab.ipynb
+++ b/whisper_asr_colab.ipynb
@@ -27,7 +27,9 @@
         "locale.getpreferredencoding = lambda: \"UTF-8\"\n",
         "\n",
         "# @title 自動文字起こし（Wisper）{ display-mode: \"form\" }\n",
-        "# @markdown 以下の設定項目を入力しセルを実行（Ctrl+Enter）<font color=\"red\">※設定項目の説明は下にあります</font>\n",
+        "# @markdown 以下の設定項目を入力しセルを実行（Ctrl+Enter）<br>\n",
+        "# @markdown <font color=\"red\">※文字の欠落が発生する場合はbatch_sizeを1にしてください。<br>\n",
+        "# @markdown 　設定項目の説明は下にあります。</font>\n",
         "# @markdown #<b>設定</b>\n",
         "audio = 'https://www.youtube.com/watch?v=xAmEQOqtMvA'  # @param {type:\"string\"}\n",
         "model_size = \"large-v3\" # @param [\"large-v3\", \"large-v2\", \"large\", \"medium\", \"small\", \"base\", \"tiny\"] {allow-input: true}\n",
@@ -37,7 +39,7 @@
         "end_time = None  # @param {type:\"string\"}\n",
         "timestamp_offset = None  # @param {type:\"string\"}\n",
         "hotwords = \"次に、これです。\" # @param {type:\"string\"}\n",
-        "batch_size = 4 # @param {type:\"number\"}\n",
+        "batch_size = 8 # @param {type:\"number\"}\n",
         "realtime = False  # @param {type:\"boolean\"}\n",
         "HUGGING_FACE_TOKEN = \"\"\n",
         "initial_prompt = \"定刻になりましたので、開始いたします。\"\n",
