--- a/whisper_asr_colab.ipynb
+++ b/whisper_asr_colab.ipynb
@@ -19,7 +19,7 @@
       "outputs": [],
       "source": [
         "import sys\n",
-        "import logging\n",
+        "from logging import getLogger, basicConfig, StreamHandler, FileHandler, Formatter, INFO, WARNING, ERROR\n",
         "import locale\n",
         "from torch.cuda import empty_cache\n",
         "from google.colab import files\n",
@@ -64,9 +64,9 @@
         "# @markdown <br/><b>reatime: </b><font color=\"red\">ストリーミングをリアルタイムで文字起こしをする場合のみオンにしてください。</font>\n",
         "\n",
         "# ----- main routine ------\n",
-        "logging.basicConfig(\n",
+        "basicConfig(\n",
         "    stream=sys.stdout,\n",
-        "    level=logging.WARNING,\n",
+        "    level=WARNING,\n",
         "    force=True)\n",
         "\n",
         "if diarization and HUGGING_FACE_TOKEN == \"\":\n",
