--- a/whisper_asr_colab_ja.ipynb
+++ b/whisper_asr_colab_ja.ipynb
@@ -26,7 +26,11 @@
         "\n",
         "locale.getpreferredencoding = lambda: \"UTF-8\"\n",
         "\n",
-        "# @title Faster-Whisper Implementation on Google Colab{ display-mode: \"form\" }\n",
+        "# @title 自動文字起こし（Wisper）{ display-mode: \"form\" }\n",
+        "# @markdown 以下の設定項目を入力しセルを実行（Ctrl+Enter）<br>\n",
+        "# @markdown <font color=\"red\">※文字の欠落が発生する場合はbatch_sizeを1にしてください。<br>\n",
+        "# @markdown 　設定項目の説明は下にあります。</font>\n",
+        "# @markdown #<b>設定</b>\n",
         "audio = 'https://www.youtube.com/watch?v=xAmEQOqtMvA'  # @param {type:\"string\"}\n",
         "model_size = \"large-v3\" # @param [\"large-v3\", \"large-v2\", \"large\", \"medium\", \"small\", \"base\", \"tiny\"] {allow-input: true}\n",
         "diarization = True  # @param {type:\"boolean\"}\n",
@@ -34,13 +38,30 @@
         "start_time = None  # @param {type:\"string\"}\n",
         "end_time = None  # @param {type:\"string\"}\n",
         "timestamp_offset = None  # @param {type:\"string\"}\n",
-        "hotwords = None # @param {type:\"string\"}\n",
+        "hotwords = \"次に、これです。\" # @param {type:\"string\"}\n",
         "batch_size = 8 # @param {type:\"number\"}\n",
         "realtime = False  # @param {type:\"boolean\"}\n",
         "hf_token = \"\"\n",
-        "initial_prompt = None\n",
+        "initial_prompt = \"定刻になりましたので、開始いたします。\"\n",
         "prefix = None\n",
         "vad_filter = True,\n",
+        "\n",
+        "# @markdown ###<br/><b>〔設定の説明〕</b>\n",
+        "# @markdown <b>audiopath:</b> 文字起こしする音声ファイルの場所<br/>\n",
+        "# @markdown 　　Youtubeの場合： https://www.youtube.com/......<br/>\n",
+        "# @markdown 　　手動で音声をアップロードした場合： 230401_1010.mp3 など<br/>\n",
+        "# @markdown 　　（アップロード完了まで待って実行してください）<br/>\n",
+        "# @markdown 　　<font color=\"red\">空欄の場合はファイルアップロードボタンが表示されます</font>\n",
+        "# @markdown <br/><b>model_size:</b> 音声認識のモデルサイズ（mediumにすると少し精度が落ちるが早い）\n",
+        "# @markdown <br/><b>diarization:</b> 発言者別の文字起こしファイルを作成するか（Falseにすると早い）\n",
+        "# @markdown #### <br/><b><font color= \"blue\">以下は必要な場合のみ設定</font></b>\n",
+        "# @markdown <b>password:</b> パスワードを指定（Webexなど）</b>\n",
+        "# @markdown <br/><b>start_time:</b> 開始時間 hh:mm:ss</b>（指定しない場合は最初から）\n",
+        "# @markdown <br/><b>end_time:</b> 終了時間 hh:mm:ss（指定しない場合は最後まで）\n",
+        "# @markdown <br/><b>timestamp_offset:</b> タイムスタンプを指定の時間だけずらす hh:mm:ss（Noneの場合はstart_timeと連動）\n",
+        "# @markdown <br/><b>hotwords:</b> キーワード（次に、これです。は句読点を付けるために入れています。）\n",
+        "# @markdown <br/><b>batch_size:</b> 2以上にすると少し早くなります。欠落が発生する場合は1にしてください。\n",
+        "# @markdown <br/><b>reatime: </b><font color=\"red\">ストリーミングをリアルタイムで文字起こしをする場合のみオンにしてください。</font>\n",
         "\n",
         "# ----- main routine ------\n",
         "basicConfig(\n",
@@ -49,7 +70,7 @@
         "    force=True)\n",
         "\n",
         "if diarization and hf_token == \"\":\n",
-        "    raise ValueError(\"Input your token to hf_token (https://huggingface.co/pyannote/speaker-diarization)\")\n",
+        "    raise ValueError(\"hf_token にトークンを入力してください (https://huggingface.co/pyannote/speaker-diarization)\")\n",
         "\n",
         "if audio == \"\":\n",
         "    audio = list(files.upload())[0]\n",
