--- a/whisper_asr_colab_ja.ipynb
+++ b/whisper_asr_colab_ja.ipynb
@@ -76,6 +76,7 @@
         "    audio = list(files.upload())[0]\n",
         "\n",
         "!pip install git+https://github.com/pneuly/whisper-asr-colab.git@main -q\n",
+        "!pip install ctranslate2==4.4.0\n",
         "from whisper_asr_colab.worker import Worker  # noqa: E402\n",
         "\n",
         "worker = Worker(\n",
