--- a/whisper_asr_colab.ipynb
+++ b/whisper_asr_colab.ipynb
@@ -28,7 +28,7 @@
         "\n",
         "# @title Faster-Whisper Implementation on Google Colab{ display-mode: \"form\" }\n",
         "audio = 'https://www.youtube.com/watch?v=xAmEQOqtMvA'  # @param {type:\"string\"}\n",
-        "model_size = \"large-v3\" # @param [\"large-v3\", \"large-v2\", \"large\", \"medium\", \"small\", \"base\", \"tiny\"] {allow-input: true}\n",
+        "model_size = \"large-v3-turbo\" # @param [\"large-v3-turbo\", \"large-v3\", \"large-v2\", \"large\", \"medium\", \"small\", \"base\", \"tiny\"] {allow-input: true}\n",
         "diarization = True  # @param {type:\"boolean\"}\n",
         "password = None  # @param {type:\"string\"}\n",
         "start_time = None  # @param {type:\"string\"}\n",
