Added progress indication during diarization

--- a/whisper_asr_colab_ja.ipynb
+++ b/whisper_asr_colab_ja.ipynb
@@ -34,10 +34,10 @@
         "audio = 'https://www.youtube.com/watch?v=xAmEQOqtMvA'  # @param {type:\"string\"}\n",
         "model_size = \"large-v3-turbo\" # @param [\"large-v3-turbo\", \"large-v3\", \"large-v2\", \"large\", \"medium\", \"small\", \"base\", \"tiny\"] {allow-input: true}\n",
         "diarization = True  # @param {type:\"boolean\"}\n",
-        "password = None  # @param {type:\"string\"}\n",
-        "start_time = None  # @param {type:\"string\"}\n",
-        "end_time = None  # @param {type:\"string\"}\n",
-        "timestamp_offset = None  # @param {type:\"string\"}\n",
+        "password = \"\"  # @param {type:\"string\"}\n",
+        "start_time = \"\"  # @param {type:\"string\"}\n",
+        "end_time = \"\"  # @param {type:\"string\"}\n",
+        "timestamp_offset = \"\"  # @param {type:\"string\"}\n",
         "hotwords = \"次に、これです。\" # @param {type:\"string\"}\n",
         "batch_size = 8 # @param {type:\"number\"}\n",
         "realtime = False  # @param {type:\"boolean\"}\n",
