--- a/whisper_asr_colab.ipynb
+++ b/whisper_asr_colab.ipynb
@@ -28,13 +28,13 @@
         "\n",
         "# @title Faster-Whisper Implementation on Google Colab{ display-mode: \"form\" }\n",
         "audio = 'https://www.youtube.com/watch?v=xAmEQOqtMvA'  # @param {type:\"string\"}\n",
-        "model_size = \"large-v3\" # @param [\"large-v3\", \"large-v2\", \"large\", \"medium\", \"small\", \"base\", \"tiny\"] {allow-input: true}\n",
+        "model_size = \"large-v3-turbo\" # @param [\"large-v3-turbo\", \"large-v3\", \"large-v2\", \"large\", \"medium\", \"small\", \"base\", \"tiny\"] {allow-input: true}\n",
         "diarization = True  # @param {type:\"boolean\"}\n",
-        "password = None  # @param {type:\"string\"}\n",
-        "start_time = None  # @param {type:\"string\"}\n",
-        "end_time = None  # @param {type:\"string\"}\n",
-        "timestamp_offset = None  # @param {type:\"string\"}\n",
-        "hotwords = None # @param {type:\"string\"}\n",
+        "password = \"\"  # @param {type:\"string\"}\n",
+        "start_time = \"\"  # @param {type:\"string\"}\n",
+        "end_time = \"\"  # @param {type:\"string\"}\n",
+        "timestamp_offset = \"\"  # @param {type:\"string\"}\n",
+        "hotwords = \"\" # @param {type:\"string\"}\n",
         "batch_size = 8 # @param {type:\"number\"}\n",
         "realtime = False  # @param {type:\"boolean\"}\n",
         "hf_token = \"\"\n",
