Change start_time and end_time handling from trimming to skipping.

--- a/whisper_asr_colab_ja.ipynb
+++ b/whisper_asr_colab_ja.ipynb
@@ -45,7 +45,7 @@
     "initial_prompt = \"定刻になりましたので、開始いたします。\"\n",
     "prefix = None\n",
     "vad_filter = False\n",
-    "trim_silence = True\n",
+    "skip_silence = True\n",
     "\n",
     "# @markdown ###<br/><b>〔設定の説明〕</b>\n",
     "# @markdown <b>audiopath:</b> 文字起こしする音声ファイルの場所<br/>\n",
@@ -96,7 +96,7 @@
     "    hotwords=hotwords,\n",
     "    prefix=prefix,\n",
     "    vad_filter=vad_filter,\n",
-    "    trim_silence=trim_silence,\n",
+    "    skip_silence=skip_silence,\n",
     ")\n",
     "\n",
     "worker.run()\n",
