--- a/whisper_asr_colab.ipynb
+++ b/whisper_asr_colab.ipynb
@@ -41,7 +41,7 @@
     "initial_prompt = None\n",
     "prefix = None\n",
     "vad_filter = False\n",
-    "trim_silence = True\n",
+    "skip_silence = True\n",
     "\n",
     "# ----- main routine ------\n",
     "basicConfig(\n",
@@ -75,7 +75,7 @@
     "    hotwords=hotwords,\n",
     "    prefix=prefix,\n",
     "    vad_filter=vad_filter,\n",
-    "    trim_silence=trim_silence,\n",
+    "    skip_silence=skip_silence,\n",
     ")\n",
     "\n",
     "worker.run()\n",
