Refactor audio handling scheme.

--- a/whisper_asr_colab.ipynb
+++ b/whisper_asr_colab.ipynb
@@ -62,7 +62,7 @@
     "worker = Worker(\n",
     "    audio=audio,\n",
     "    model_size=model_size,\n",
-    "    language=\"ja\",\n",
+    "    language=\"en\",\n",
     "    diarization=diarization,\n",
     "    password=password,\n",
     "    start_time=start_time,\n",
