--- a/whisper_asr_colab.ipynb
+++ b/whisper_asr_colab.ipynb
@@ -18,8 +18,7 @@
    },
    "outputs": [],
    "source": [
-    "import sys\n",
-    "from logging import getLogger, basicConfig, StreamHandler, FileHandler, Formatter, INFO, WARNING, ERROR\n",
+    "from logging import getLogger, StreamHandler, FileHandler, Formatter, INFO, WARNING, ERROR\n",
     "import locale\n",
     "from torch.cuda import empty_cache\n",
     "from google.colab import files\n",
@@ -44,10 +43,9 @@
     "skip_silence = True\n",
     "\n",
     "# ----- main routine ------\n",
-    "basicConfig(\n",
-    "    stream=sys.stdout,\n",
-    "    level=WARNING,\n",
-    "    force=True)\n",
+    "logger = getLogger(__name__)\n",
+    "if not logger.hasHandlers():\n",
+    "    logger.addHandler(StreamHandler())\n",
     "\n",
     "if diarization and hf_token == \"\":\n",
     "    raise ValueError(\"Input your token to hf_token (https://huggingface.co/pyannote/speaker-diarization)\")\n",
@@ -57,7 +55,13 @@
     "\n",
     "!pip install git+https://github.com/pneuly/whisper-asr-colab.git@main -q\n",
     "!pip install ctranslate2==4.4.0\n",
-    "from whisper_asr_colab.worker import Worker  # noqa: E402\n",
+    "from whisper_asr_colab.worker import Worker, Audio  # noqa: E402\n",
+    "\n",
+    "audio = Audio().from_path_or_url(audio)\n",
+    "if start_time:\n",
+    "    audio.start_time = start_time\n",
+    "if end_time:\n",
+    "    audio.end_time = end_time\n",
     "\n",
     "worker = Worker(\n",
     "    audio=audio,\n",
@@ -65,8 +69,6 @@
     "    language=\"en\",\n",
     "    diarization=diarization,\n",
     "    password=password,\n",
-    "    start_time=start_time,\n",
-    "    end_time=end_time,\n",
     "    timestamp_offset=timestamp_offset,\n",
     "    initial_prompt=initial_prompt,\n",
     "    realtime=realtime,\n",
