Update readme and ipynb

--- a/whisper_asr_colab_ja.ipynb
+++ b/whisper_asr_colab_ja.ipynb
@@ -18,18 +18,14 @@
    },
    "outputs": [],
    "source": [
-    "from logging import getLogger, StreamHandler, FileHandler, Formatter, INFO, WARNING, ERROR\n",
+    "import logging\n",
     "import locale\n",
     "from torch.cuda import empty_cache\n",
     "from google.colab import files\n",
     "\n",
     "locale.getpreferredencoding = lambda: \"UTF-8\"\n",
     "\n",
-    "# @title 自動文字起こし（Wisper）{ display-mode: \"form\" }\n",
-    "# @markdown 以下の設定項目を入力しセルを実行（Ctrl+Enter）<br>\n",
-    "# @markdown <font color=\"red\">※文字の欠落が発生する場合はbatch_sizeを1にしてください。<br>\n",
-    "# @markdown 　設定項目の説明は下にあります。</font>\n",
-    "# @markdown #<b>設定</b>\n",
+    "# @title 自動文字起こし{ display-mode: \"form\" }\n",
     "audio = 'https://www.youtube.com/watch?v=xAmEQOqtMvA'  # @param {type:\"string\"}\n",
     "model_size = \"large-v3-turbo\" # @param [\"large-v3-turbo\", \"large-v3\", \"large-v2\", \"large\", \"medium\", \"small\", \"base\", \"tiny\"] {allow-input: true}\n",
     "diarization = True  # @param {type:\"boolean\"}\n",
@@ -37,48 +33,49 @@
     "start_time = \"\"  # @param {type:\"string\"}\n",
     "end_time = \"\"  # @param {type:\"string\"}\n",
     "timestamp_offset = \"\"  # @param {type:\"string\"}\n",
+    "skip_silence = True  # @param {type:\"boolean\"}\n",
     "hotwords = \"次に、これです。\" # @param {type:\"string\"}\n",
-    "batch_size = 8 # @param {type:\"number\"}\n",
+    "batch_size = 1 # @param {type:\"number\"}\n",
     "realtime = False  # @param {type:\"boolean\"}\n",
-    "hf_token = \"\"\n",
+    "HUGGING_FACE_TOKEN = \"\"\n",
     "initial_prompt = \"定刻になりましたので、開始いたします。\"\n",
     "prefix = None\n",
     "vad_filter = False\n",
-    "skip_silence = True\n",
     "\n",
     "# @markdown ###<br/><b>〔設定の説明〕</b>\n",
     "# @markdown <b>audiopath:</b> 文字起こしする音声ファイルの場所<br/>\n",
     "# @markdown 　　Youtubeの場合： https://www.youtube.com/......<br/>\n",
     "# @markdown 　　手動で音声をアップロードした場合： 230401_1010.mp3 など<br/>\n",
-    "# @markdown 　　（アップロード完了まで待って実行してください）<br/>\n",
-    "# @markdown 　　<font color=\"red\">空欄の場合はファイルアップロードボタンが表示されます</font>\n",
-    "# @markdown <br/><b>model_size:</b> 音声認識のモデルサイズ（mediumにすると少し精度が落ちるが早い）\n",
-    "# @markdown <br/><b>diarization:</b> 発言者別の文字起こしファイルを作成するか（Falseにすると早い）\n",
+    "# @markdown <br/><b>model_size:</b> 音声認識のモデルサイズ\n",
+    "# @markdown <br/><b>diarization:</b> 発言者別の文字起こしファイルを作成するか\n",
     "# @markdown #### <br/><b><font color= \"blue\">以下は必要な場合のみ設定</font></b>\n",
     "# @markdown <b>password:</b> パスワードを指定（Webexなど）</b>\n",
     "# @markdown <br/><b>start_time:</b> 開始時間 hh:mm:ss</b>（指定しない場合は最初から）\n",
     "# @markdown <br/><b>end_time:</b> 終了時間 hh:mm:ss（指定しない場合は最後まで）\n",
-    "# @markdown <br/><b>timestamp_offset:</b> タイムスタンプを指定の時間だけずらす hh:mm:ss（Noneの場合はstart_timeと連動）\n",
+    "# @markdown <br/><b>timestamp_offset:</b> タイムスタンプを指定の時間だけずらす hh:mm:ss（指定しない場合はstart_timeと連動）\n",
+    "# @markdown <br/><b>skip_silence:</b> 先頭と最後の無音区間を削除\n",
     "# @markdown <br/><b>hotwords:</b> キーワード（次に、これです。は句読点を付けるために入れています。）\n",
-    "# @markdown <br/><b>batch_size:</b> 2以上にすると少し早くなります。欠落が発生する場合は1にしてください。\n",
-    "# @markdown <br/><b>reatime: </b><font color=\"red\">ストリーミングをリアルタイムで文字起こしをする場合のみオンにしてください。</font>\n",
+    "# @markdown <br/><b>batch_size:</b> 2以上にすると少し早くなります。1の場合と2以上の場合で文字起こし結果が変わります。\n",
+    "# @markdown <br/><b>reatime: </b>ストリーミングをリアルタイムで文字起こしをする場合のみオンにしてください。</font>\n",
     "\n",
     "# ----- main routine ------\n",
-    "logger = getLogger(__name__)\n",
+    "logger = logging.getLogger(__name__)\n",
+    "logger.setLevel(logging.WARNING)\n",
     "if not logger.hasHandlers():\n",
-    "    logger.addHandler(StreamHandler())\n",
+    "    logger.addHandler(logging.StreamHandler())\n",
     "\n",
-    "if diarization and hf_token == \"\":\n",
-    "    raise ValueError(\"hf_token にトークンを入力してください (https://huggingface.co/pyannote/speaker-diarization)\")\n",
+    "if diarization and HUGGING_FACE_TOKEN == \"\":\n",
+    "    raise ValueError(\"HUGGING_FACE_TOKEN にトークンを入力してください\")\n",
     "\n",
     "if audio == \"\":\n",
     "    audio = list(files.upload())[0]\n",
     "\n",
     "!pip install git+https://github.com/pneuly/whisper-asr-colab.git@main -q\n",
     "!pip install ctranslate2==4.4.0\n",
-    "from whisper_asr_colab.worker import Worker, Audio  # noqa: E402\n",
+    "from whisper_asr_colab.worker import Worker # noqa: E402\n",
+    "from whisper_asr_colab.audio import Audio  # noqa: E402\n",
     "\n",
-    "audio = Audio().from_path_or_url(audio)\n",
+    "audio = Audio.from_path_or_url(audio)\n",
     "if start_time:\n",
     "    audio.start_time = start_time\n",
     "if end_time:\n",
@@ -90,22 +87,23 @@
     "    language=\"ja\",\n",
     "    diarization=diarization,\n",
     "    password=password,\n",
-    "    timestamp_offset=timestamp_offset,\n",
     "    initial_prompt=initial_prompt,\n",
     "    realtime=realtime,\n",
     "    batch_size=batch_size,\n",
-    "    hugging_face_token=hf_token,\n",
+    "    hugging_face_token=HUGGING_FACE_TOKEN,\n",
     "    hotwords=hotwords,\n",
     "    prefix=prefix,\n",
-    "    vad_filter=vad_filter,\n",
+    "    vad_filter=False,\n",
     "    skip_silence=skip_silence,\n",
     ")\n",
+    "if timestamp_offset:\n",
+    "    worker.timestamp_offset = timestamp_offset\n",
     "\n",
     "worker.run()\n",
     "\n",
     "# gc GPU RAM\n",
     "del worker\n",
-    "empty_cache()\n"
+    "empty_cache()"
    ]
   }
  ],
