Squashed commit of the following and other minor modifications: - Refactor audio handling scheme. - Replace class SpeakerSegmentList with List[SpeakerSegment] - Replace print-based logging with logger.

--- a/whisper_asr_colab.ipynb
+++ b/whisper_asr_colab.ipynb
@@ -18,8 +18,7 @@
    },
    "outputs": [],
    "source": [
-    "import sys\n",
-    "from logging import getLogger, basicConfig, StreamHandler, FileHandler, Formatter, INFO, WARNING, ERROR\n",
+    "import logging\n",
     "import locale\n",
     "from torch.cuda import empty_cache\n",
     "from google.colab import files\n",
@@ -34,22 +33,22 @@
     "start_time = \"\"  # @param {type:\"string\"}\n",
     "end_time = \"\"  # @param {type:\"string\"}\n",
     "timestamp_offset = \"\"  # @param {type:\"string\"}\n",
+    "skip_silence = True  # @param {type:\"boolean\"}\n",
     "hotwords = \"\" # @param {type:\"string\"}\n",
-    "batch_size = 8 # @param {type:\"number\"}\n",
+    "batch_size = 1 # @param {type:\"number\"}\n",
     "realtime = False  # @param {type:\"boolean\"}\n",
-    "hf_token = \"\"\n",
-    "initial_prompt = None\n",
+    "HUGGING_FACE_TOKEN = \"\"\n",
+    "initial_prompt = \"\"\n",
     "prefix = None\n",
     "vad_filter = False\n",
-    "skip_silence = True\n",
     "\n",
     "# ----- main routine ------\n",
-    "basicConfig(\n",
-    "    stream=sys.stdout,\n",
-    "    level=WARNING,\n",
-    "    force=True)\n",
+    "logger = logging.getLogger(__name__)\n",
+    "logger.setLevel(logging.WARNING)\n",
+    "if not logger.hasHandlers():\n",
+    "    logger.addHandler(logging.StreamHandler())\n",
     "\n",
-    "if diarization and hf_token == \"\":\n",
+    "if diarization and HUGGING_FACE_TOKEN == \"\":\n",
     "    raise ValueError(\"Input your token to hf_token (https://huggingface.co/pyannote/speaker-diarization)\")\n",
     "\n",
     "if audio == \"\":\n",
@@ -58,25 +57,31 @@
     "!pip install git+https://github.com/pneuly/whisper-asr-colab.git@main -q\n",
     "!pip install ctranslate2==4.4.0\n",
     "from whisper_asr_colab.worker import Worker  # noqa: E402\n",
+    "from whisper_asr_colab.audio import Audio  # noqa: E402\n",
+    "\n",
+    "audio = Audio.from_path_or_url(audio)\n",
+    "if start_time:\n",
+    "    audio.start_time = start_time\n",
+    "if end_time:\n",
+    "    audio.end_time = end_time\n",
     "\n",
     "worker = Worker(\n",
     "    audio=audio,\n",
     "    model_size=model_size,\n",
-    "    language=\"ja\",\n",
+    "    language=\"en\",\n",
     "    diarization=diarization,\n",
     "    password=password,\n",
-    "    start_time=start_time,\n",
-    "    end_time=end_time,\n",
-    "    timestamp_offset=timestamp_offset,\n",
     "    initial_prompt=initial_prompt,\n",
     "    realtime=realtime,\n",
     "    batch_size=batch_size,\n",
-    "    hugging_face_token=hf_token,\n",
+    "    hugging_face_token=HUGGING_FACE_TOKEN,\n",
     "    hotwords=hotwords,\n",
     "    prefix=prefix,\n",
-    "    vad_filter=vad_filter,\n",
+    "    vad_filter=False,\n",
     "    skip_silence=skip_silence,\n",
     ")\n",
+    "if timestamp_offset:\n",
+    "    worker.timestamp_offset = timestamp_offset\n",
     "\n",
     "worker.run()\n",
     "\n",
